# greentic-desktop

./: .gitignore  Cargo.toml  README.md  coverage-policy.json  install.ps1  install.sh
.codex/: PR-01-Core-Runtime-and-CLI.md  PR-03-Extension-Manager-and-Sidecar-Runtime.md  PR-04-Playwright-Web-Adapter.md  PR-05-Windows-UI-Adapter.md  PR-07-Terminal-and-Mainframe-Adapters.md  PR-10-Recording-Engine-and-Portable-Runner-Package.md  PR-11-Prompt-To-Runner-Planner.md  PR-13-Replay-Engine-and-Validation.md  PR-14-Evidence-Store-and-Audit-Bundles.md  PR-16-MCP-Server-and-Tool-Publishing.md  PR-18-LTM-and-Root-Cause-Learning.md  PR-19-AWS-WorkSpaces-Integration.md  PR-22-Forwarded-Tool-Builder.md  PR-24-End-to-End-MVP-Plan.md  PR-62-Store-Index-Generation-from-Extension-Manifests.md  PR-63-Real-Recorder-Session-Runtime-And-Event-Stream.md  PR-64-Native-Desktop-Recording-Backends.md  PR-65-Web-Terminal-And-Remote-Recording-Backends.md  PR-66-Java-App-Recording.md  PR-68-Recorder-End-To-End-Fixtures-And-CI.md  PR-71-LLM-Planner-Orchestrator-And-Capability-Aware-Draft-Generation.md  PR-73-LLM-Evaluation-Fixtures-And-Golden-Prompt-Tests.md  PR-74-LLM-Planning-UX-Traceability-And-Controls.md  PR-80-Playwright-Java-App-E2E.md  PR-81-Playwright-Recording-Replay-And-Evidence-E2E.md  PR-84-Playwright-Release-Gate-Cross-Platform-Matrix.md  README.md  global_rules.md  repo_overview.md  repo_overview_task.md
.codex/done/: PR-01-Core-Runtime-and-CLI.md  PR-02-Adapter-SDK-and-Capability-Model.md  PR-04-Playwright-Web-Adapter.md  PR-06-Java-Desktop-Adapter.md  PR-08-Vision-and-Screenshot-Fallback-Adapter.md  PR-09-Session-Bootstrap-Profiles.md  PR-100-Real-Recording-Capture-Streams-For-All-Targets.md  PR-101-Generic-Output-Extractors-And-Side-Effect-Verification.md  PR-102-Production-E2E-Matrix-And-No-Mock-CI-Gates.md  PR-103-Product-Truthfulness-UX-Docs-And-Migration.md  PR-104-DesktopWorkflow-Primitive-Vocabulary-And-Schema.md  PR-105-Primitive-To-Adapter-Compiler-For-Current-Platform.md  PR-106-LLM-Planning-Generates-Primitives-Not-Raw-Adapter-Steps.md  PR-107-Recorder-Normalizes-Raw-Events-Into-Primitives.md  PR-108-Desktop-Resource-And-Dialog-Primitives-For-macOS-Windows-Linux.md  PR-109-Structured-Data-Table-And-Spreadsheet-Primitives.md  PR-11-Prompt-To-Runner-Planner.md  PR-110-Replay-Proof-Model-And-Step-Level-Diagnostics.md  (+141 more)
ci/: crate_publish_order.sh  gui_e2e.sh  gui_e2e_desktop_manual.sh  gui_e2e_functional.sh  gui_e2e_release_report.sh  gui_e2e_smoke.sh  gui_smoke.sh  install_linux_native_deps.sh  live_desktop_check.sh  local_check.sh  no_handrolled_scripting_check.sh  no_mock_production_check.sh  package_extension.sh  workspace_dependency_policy_check.sh
crates/greentic-desktop-adapter/: Cargo.toml
crates/greentic-desktop-adapter/src/: lib.rs
crates/greentic-desktop-automation-foundation/: Cargo.toml
crates/greentic-desktop-automation-foundation/src/: lib.rs
crates/greentic-desktop-business/: Cargo.toml
crates/greentic-desktop-business/src/: lib.rs
crates/greentic-desktop-cli/: Cargo.toml
crates/greentic-desktop-cli/src/: lib.rs
crates/greentic-desktop-config/: Cargo.toml
crates/greentic-desktop-config/src/: lib.rs
crates/greentic-desktop-core/: Cargo.toml
crates/greentic-desktop-core/benches/: perf.rs
crates/greentic-desktop-core/src/: lib.rs
crates/greentic-desktop-core/tests/: perf_scaling.rs
crates/greentic-desktop-deployment/: Cargo.toml
crates/greentic-desktop-deployment/src/: lib.rs
crates/greentic-desktop-evidence/: Cargo.toml
crates/greentic-desktop-evidence/src/: lib.rs
crates/greentic-desktop-excel/: Cargo.toml
crates/greentic-desktop-excel/src/: lib.rs
crates/greentic-desktop-extension/: Cargo.toml
crates/greentic-desktop-extension/src/: lib.rs
crates/greentic-desktop-forwarded/: Cargo.toml
crates/greentic-desktop-forwarded/src/: lib.rs
crates/greentic-desktop-gui/: Cargo.toml
crates/greentic-desktop-gui-assets/: Cargo.toml  build.rs
crates/greentic-desktop-gui-assets/assets/: index.html  styles.css
crates/greentic-desktop-gui-assets/src/: lib.rs
crates/greentic-desktop-gui/src/: lib.rs
crates/greentic-desktop-io/: Cargo.toml
crates/greentic-desktop-io/src/: lib.rs
crates/greentic-desktop-java/: Cargo.toml
crates/greentic-desktop-java/src/: lib.rs
crates/greentic-desktop-linux/: Cargo.toml
crates/greentic-desktop-linux/src/: lib.rs
crates/greentic-desktop-llm/: Cargo.toml
crates/greentic-desktop-llm/src/: lib.rs
crates/greentic-desktop-ltm/: Cargo.toml
crates/greentic-desktop-ltm/src/: lib.rs
crates/greentic-desktop-macos/: Cargo.toml
crates/greentic-desktop-macos/src/: lib.rs
crates/greentic-desktop-mcp/: Cargo.toml
crates/greentic-desktop-mcp/src/: lib.rs
crates/greentic-desktop-mvp/: Cargo.toml
crates/greentic-desktop-mvp/src/: lib.rs
crates/greentic-desktop-planner/: Cargo.toml
crates/greentic-desktop-planner/src/: lib.rs
crates/greentic-desktop-platform/: Cargo.toml
crates/greentic-desktop-platform/src/: lib.rs
crates/greentic-desktop-policy/: Cargo.toml
crates/greentic-desktop-policy/src/: lib.rs
crates/greentic-desktop-recorder/: Cargo.toml
crates/greentic-desktop-recorder/src/: lib.rs
crates/greentic-desktop-refinement/: Cargo.toml
crates/greentic-desktop-refinement/src/: lib.rs
crates/greentic-desktop-registry/: Cargo.toml
crates/greentic-desktop-registry/src/: lib.rs
crates/greentic-desktop-replay/: Cargo.toml
crates/greentic-desktop-replay/src/: lib.rs
crates/greentic-desktop-rollout/: Cargo.toml
crates/greentic-desktop-rollout/src/: lib.rs
docs/: adapters.md  aws-workspaces-mcp.md  business-workflows.md  capability-matrix.md  cli-reference.md  deployment-and-rollout.md  developer-notes.md  e2e-smoke.md  evidence.md  extension-ghcr-pipeline.md  extension-package-format.md  extension-store.md  getting-started.md  gui.md  import-export.md  install-one-line.md  live-validation.md  mcp-tools.md  production-readiness.md  recording-and-refinement.md  recording-runbooks.md  release.md  runners.md  security.md  testing-e2e.md
(+93 files in other folders)
