[workspace]
resolver = "2"
members = [
  "crates/greentic-desktop-core",
  "crates/greentic-desktop-config",
  "crates/greentic-desktop-adapter",
  "crates/greentic-desktop-automation-foundation",
  "crates/greentic-desktop-workflow",
  "crates/greentic-desktop-extension",
  "crates/greentic-distributor-client",
  "crates/greentic-desktop-web",
  "crates/greentic-desktop-windows",
  "crates/greentic-desktop-java",
  "crates/greentic-desktop-terminal",
  "crates/greentic-desktop-vision",
  "crates/greentic-desktop-recorder",
  "crates/greentic-desktop-llm",
  "crates/greentic-desktop-runner-schema",
  "crates/greentic-desktop-policy",
  "crates/greentic-desktop-planner",
  "crates/greentic-desktop-refinement",
  "crates/greentic-desktop-replay",
  "crates/greentic-desktop-evidence",
  "crates/greentic-desktop-registry",
  "crates/greentic-desktop-mcp",
  "crates/greentic-desktop-security",
  "crates/greentic-desktop-ltm",
  "crates/greentic-desktop-workspaces",
  "crates/greentic-desktop-rollout",
  "crates/greentic-desktop-business",
  "crates/greentic-desktop-forwarded",
  "crates/greentic-desktop-deployment",
  "crates/greentic-desktop-mvp",
  "crates/greentic-desktop-platform",
  "crates/greentic-desktop-macos",
  "crates/greentic-desktop-linux",
  "crates/greentic-desktop-windowing",
  "crates/greentic-desktop-io",
  "crates/greentic-desktop-test-harness",
  "crates/greentic-desktop-session",
  "crates/greentic-desktop-runtime",
  "crates/greentic-desktop-telemetry",
  "crates/greentic-desktop-gui-assets",
  "crates/greentic-desktop-gui",
  "crates/greentic-desktop-cli",
]

[workspace.package]
version = "0.1.11"
edition = "2021"
license = "MIT"
repository = "https://github.com/greenticai/greentic-desktop"
homepage = "https://github.com/greenticai/greentic-desktop"
documentation = "https://docs.rs/greentic-desktop"
keywords = ["greentic", "desktop", "automation", "runner"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
criterion = "0.8"
greentic-llm = "1.2.6-research"
greentic-desktop-core = { path = "crates/greentic-desktop-core", version = "0.1" }
greentic-desktop-config = { path = "crates/greentic-desktop-config", version = "0.1" }
greentic-desktop-adapter = { path = "crates/greentic-desktop-adapter", version = "0.1" }
greentic-desktop-automation-foundation = { path = "crates/greentic-desktop-automation-foundation", version = "0.1" }
greentic-desktop-workflow = { path = "crates/greentic-desktop-workflow", version = "0.1" }
greentic-desktop-extension = { path = "crates/greentic-desktop-extension", version = "0.1" }
greentic-distributor-client = { path = "crates/greentic-distributor-client", version = "0.1" }
greentic-desktop-web = { path = "crates/greentic-desktop-web", version = "0.1" }
greentic-desktop-windows = { path = "crates/greentic-desktop-windows", version = "0.1" }
greentic-desktop-java = { path = "crates/greentic-desktop-java", version = "0.1" }
greentic-desktop-terminal = { path = "crates/greentic-desktop-terminal", version = "0.1" }
greentic-desktop-vision = { path = "crates/greentic-desktop-vision", version = "0.1" }
greentic-desktop-recorder = { path = "crates/greentic-desktop-recorder", version = "0.1" }
greentic-desktop-llm = { path = "crates/greentic-desktop-llm", version = "0.1" }
greentic-desktop-runner-schema = { path = "crates/greentic-desktop-runner-schema", version = "0.1" }
greentic-desktop-policy = { path = "crates/greentic-desktop-policy", version = "0.1" }
greentic-desktop-planner = { path = "crates/greentic-desktop-planner", version = "0.1" }
greentic-desktop-refinement = { path = "crates/greentic-desktop-refinement", version = "0.1" }
greentic-desktop-replay = { path = "crates/greentic-desktop-replay", version = "0.1" }
greentic-desktop-evidence = { path = "crates/greentic-desktop-evidence", version = "0.1" }
greentic-desktop-registry = { path = "crates/greentic-desktop-registry", version = "0.1" }
greentic-desktop-mcp = { path = "crates/greentic-desktop-mcp", version = "0.1" }
greentic-desktop-security = { path = "crates/greentic-desktop-security", version = "0.1" }
greentic-desktop-ltm = { path = "crates/greentic-desktop-ltm", version = "0.1" }
greentic-desktop-workspaces = { path = "crates/greentic-desktop-workspaces", version = "0.1" }
greentic-desktop-rollout = { path = "crates/greentic-desktop-rollout", version = "0.1" }
greentic-desktop-business = { path = "crates/greentic-desktop-business", version = "0.1" }
greentic-desktop-forwarded = { path = "crates/greentic-desktop-forwarded", version = "0.1" }
greentic-desktop-deployment = { path = "crates/greentic-desktop-deployment", version = "0.1" }
greentic-desktop-mvp = { path = "crates/greentic-desktop-mvp", version = "0.1" }
greentic-desktop-platform = { path = "crates/greentic-desktop-platform", version = "0.1" }
greentic-desktop-macos = { path = "crates/greentic-desktop-macos", version = "0.1" }
greentic-desktop-linux = { path = "crates/greentic-desktop-linux", version = "0.1" }
greentic-desktop-windowing = { path = "crates/greentic-desktop-windowing", version = "0.1" }
greentic-desktop-io = { path = "crates/greentic-desktop-io", version = "0.1" }
greentic-desktop-test-harness = { path = "crates/greentic-desktop-test-harness", version = "0.1" }
greentic-desktop-session = { path = "crates/greentic-desktop-session", version = "0.1" }
greentic-desktop-runtime = { path = "crates/greentic-desktop-runtime", version = "0.1" }
greentic-desktop-telemetry = { path = "crates/greentic-desktop-telemetry", version = "0.1" }
greentic-desktop-gui-assets = { path = "crates/greentic-desktop-gui-assets", version = "0.1" }
greentic-desktop-gui = { path = "crates/greentic-desktop-gui", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
reqwest = { version = "0.13", features = ["json"] }
axum = "0.8"
hyper = "1"
rmcp = { version = "2", features = ["client", "server", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
rdev = "0.5"
enigo = "0.6"
xcap = { version = "0.9", features = ["image"] }
schemars = "1.2"
jsonschema = { version = "0.46", default-features = false, features = ["resolve-file"] }
ed25519-dalek = "2.2"
portable-pty = "0.9"
vte = "0.15"
