[package]
name = "greentic-desktop-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Adapter SDK and generic capability model for the Greentic desktop runner."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[lib]
name = "greentic_desktop_adapter"
path = "src/lib.rs"

[dependencies]
greentic-desktop-core.workspace = true
serde.workspace = true
