[package]
name = "greentic-desktop-automation-foundation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared automation foundation for Greentic Desktop adapters."
keywords.workspace = true
categories.workspace = true

[lib]
name = "greentic_desktop_automation_foundation"
path = "src/lib.rs"

[dependencies]
ed25519-dalek.workspace = true
enigo.workspace = true
greentic-desktop-security.workspace = true
jsonschema.workspace = true
rdev.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
xcap.workspace = true
