[package]
name = "greentic-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command line interface for the Greentic desktop runner."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[lib]
name = "greentic_desktop_cli"
path = "src/lib.rs"

[[bin]]
name = "greentic-desktop"
path = "src/bin/greentic-desktop.rs"

[[bin]]
name = "gtc"
path = "src/bin/gtc.rs"

[dependencies]
greentic-desktop-config.workspace = true
greentic-desktop-extension.workspace = true
greentic-desktop-gui.workspace = true
greentic-desktop-macos.workspace = true
greentic-desktop-planner.workspace = true
greentic-desktop-recorder.workspace = true
greentic-desktop-runtime.workspace = true
serde_json.workspace = true
