[package]
name = "greentic-desktop-excel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Excel workbook adapter for Greentic Desktop file-based spreadsheet automation."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[lib]
name = "greentic_desktop_excel"
path = "src/lib.rs"

[dependencies]
calamine.workspace = true
greentic-desktop-adapter.workspace = true
rust_xlsxwriter.workspace = true
serde.workspace = true
serde_json.workspace = true
