[package]
name = "greentic-desktop-forwarded"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Forwarded MCP tool builder for Greentic desktop runners."
keywords.workspace = true
categories.workspace = true
publish = false
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[lib]
name = "greentic_desktop_forwarded"
path = "src/lib.rs"

[dependencies]
greentic-desktop-adapter.workspace = true
greentic-desktop-core.workspace = true
greentic-desktop-mcp.workspace = true
greentic-desktop-recorder.workspace = true
greentic-desktop-registry.workspace = true
greentic-desktop-security.workspace = true
greentic-desktop-session.workspace = true
