[package]
name = "greentic-desktop-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Loopback HTTP host for the Greentic Automate Hub browser UI."
keywords.workspace = true
categories.workspace = true

[lib]
name = "greentic_desktop_gui"
path = "src/lib.rs"

[dependencies]
greentic-desktop-adapter.workspace = true
greentic-desktop-core.workspace = true
greentic-distributor-client.workspace = true
greentic-desktop-evidence.workspace = true
greentic-desktop-extension.workspace = true
greentic-desktop-gui-assets.workspace = true
greentic-desktop-java.workspace = true
greentic-desktop-linux.workspace = true
greentic-desktop-llm.workspace = true
greentic-desktop-mcp.workspace = true
greentic-desktop-macos.workspace = true
greentic-desktop-planner.workspace = true
greentic-desktop-platform.workspace = true
greentic-desktop-recorder.workspace = true
greentic-desktop-replay.workspace = true
greentic-desktop-runner-schema.workspace = true
greentic-desktop-security.workspace = true
greentic-desktop-session.workspace = true
greentic-desktop-terminal.workspace = true
greentic-desktop-vision.workspace = true
greentic-desktop-web.workspace = true
greentic-desktop-workflow.workspace = true
greentic-desktop-windows.workspace = true
serde_json.workspace = true
