[package]
name = "greentic-desktop-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
greentic-desktop-evidence.workspace = true
greentic-desktop-platform.workspace = true
