[package]
name = "greentic-desktop-java"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Java desktop accessibility adapter model for the Greentic desktop runner."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[lib]
name = "greentic_desktop_java"
path = "src/lib.rs"

[dependencies]
greentic-desktop-adapter.workspace = true
greentic-desktop-recorder.workspace = true
greentic-desktop-workflow.workspace = true
