[package]
name = "greentic-desktop-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Linux X11 and Wayland automation adapter model for Greentic Desktop."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[dependencies]
greentic-desktop-adapter.workspace = true
greentic-desktop-platform.workspace = true
greentic-desktop-recorder.workspace = true
greentic-desktop-workflow.workspace = true
