[package]
name = "greentic-desktop-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
greentic-desktop-adapter.workspace = true
greentic-desktop-platform.workspace = true
greentic-desktop-workflow.workspace = true
