[package]
name = "greentic-desktop-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "MCP tool publishing model for Greentic desktop runner packages."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[lib]
name = "greentic_desktop_mcp"
path = "src/lib.rs"

[dependencies]
greentic-desktop-adapter.workspace = true
greentic-desktop-core.workspace = true
greentic-desktop-recorder.workspace = true
greentic-desktop-replay.workspace = true
greentic-desktop-runner-schema.workspace = true
greentic-desktop-security.workspace = true
greentic-desktop-session.workspace = true
greentic-desktop-workflow.workspace = true
serde_json.workspace = true
