[package]
name = "greentic-desktop-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared desktop platform detection and permission helpers for Greentic Desktop."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[dependencies]
greentic-desktop-adapter.workspace = true
greentic-desktop-recorder.workspace = true
