[package]
name = "greentic-desktop-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Prompt planning policy checks for Greentic desktop runner drafts."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[lib]
name = "greentic_desktop_policy"
path = "src/lib.rs"

[dependencies]
greentic-desktop-core.workspace = true
greentic-desktop-runner-schema.workspace = true
