[package]
name = "greentic-desktop-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Recording engine and portable runner package model for the Greentic desktop runner."
keywords.workspace = true
categories.workspace = true
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[lib]
name = "greentic_desktop_recorder"
path = "src/lib.rs"

[dependencies]
greentic-desktop-adapter.workspace = true
serde.workspace = true
serde_json.workspace = true
